[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
[project]
name = "quadsim-sdk"
version = "0.12.0"
description = "Python SDK for QuadSim drone simulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyzmq>=25.0",
    "msgpack>=1.0",
]

[project.urls]
Repository = "https://github.com/ninonicok0607/QuadSimLib"

[tool.setuptools.packages.find]
include = ["quadsim*"]